cabal-version: >=1.8
Name:           TableAlgebra2
synopsis:       Ferry Table Algebra
Category:       Database
Version:        0.0.0.1
Description:    The Ferry 2.0 Table Algebra library
                .
                The table algebra [2] is an intermediate language used by Ferry 2.0 [3] and DSH [4].
                It forms the input for the pathfinder [1] optimiser that can translate it into SQL.
                The library exposes a monadic interface to construct algebraic plans, it 
                automatically performs common sub-tree elimination so that the resulting plan
                is as small as possible and the optimiser can do it's work better. 
                XML rendering is present and needed for interfacing with DSH-Pathfinder, and 
                for debugging plans with the standalone Pathfinder.
                .
                .
                 1. <http://www-db.informatik.uni-tuebingen.de/research/pathfinder>
                .
                 2. <http://dbworld.informatik.uni-tuebingen.de/projects/pathfinder/wiki/Logical_Algebra>
                .
                 3. <http://www-db.informatik.uni-tuebingen.de/research/ferry>
                .
                 4. <http://www-db.informatik.uni-tuebingen.de/files/publications/ferryhaskell.pdf>
License:        BSD3
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> Tom Schreiber <tom.schreiber@uni-tuebingen.de>
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>
Build-Type:     Simple

library
    buildable:        True
    build-depends:    base >= 4.2 && < 5,  HaXml >= 1.22, mtl >= 2.0.1.0, containers >= 0.3.0.0, template-haskell >= 2.4.0.0, pretty >= 1.0.1.1, fgl, transformers, parsec
    exposed-modules:  Database.Algebra.Impossible
                      Database.Algebra.Pathfinder
                      Database.Algebra.Pathfinder.Render.XML
                      Database.Algebra.Dag
                      Database.Algebra.Dag.Builder
                      Database.Algebra.Dag.Common
                      Database.Algebra.Rewrite.DagRewrite
                      Database.Algebra.Rewrite.PatternSyntax
                      Database.Algebra.Rewrite.PatternConstruction
                      Database.Algebra.Rewrite.Match
                      Database.Algebra.Rewrite.Rule
                      Database.Algebra.Rewrite.Traversal
                      Database.Algebra.X100.Normalize 
                      Database.Algebra.X100.Serialize
                      Database.Algebra.X100.Render.Dot
                      Database.Algebra.X100.Render.X100Code
                      Database.Algebra.X100.Render.Common
                      Database.Algebra.X100.Data.Create
                      Database.Algebra.X100.Data.Algebra
                      Database.Algebra.X100.Properties
                      Database.Algebra.X100.ExprUtils
                      Database.Algebra.X100.ProjectUtils
    hs-source-dirs:   src
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    other-modules:    Database.Algebra.Pathfinder.Monadic.Create
                      Database.Algebra.Pathfinder.Data.Algebra
                      Database.Algebra.Pathfinder.Data.Create
                      Database.Algebra.Pathfinder.Render.XMLUtils
                      Database.Algebra.X100.Render.Sharing
                      Database.Algebra.X100.Properties.Schema
                      Database.Algebra.X100.Properties.Card1
                      Database.Algebra.X100.Properties.Const
                      Database.Algebra.X100.Properties.Empty
                      Database.Algebra.X100.Properties.SideEffect
                      Database.Algebra.X100.Properties.ICols
                      Database.Algebra.X100.Properties.Key
                      Database.Algebra.X100.Properties.Domain
                      Database.Algebra.X100.Properties.Types
                      Database.Algebra.X100.Properties.BottomUp
                      Database.Algebra.X100.Properties.TopDown
                      Database.Algebra.Aux

executable x100dot
    Main-is: Database/Algebra/X100/Tools/DotGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, HaXml >= 1.22, mtl >= 2.0.1.0, containers >= 0.3.0.0, template-haskell >= 2.4.0.0, pretty >= 1.0.1.1, fgl

executable x100gen
    Main-is: Database/Algebra/X100/Tools/CodeGen.hs
    GHC-Options:       -Wall -fno-warn-orphans -fno-warn-type-defaults -fno-warn-unused-do-bind 
    hs-source-dirs:   src
    build-depends:    base >= 4.2 && < 5, HaXml >= 1.22, mtl >= 2.0.1.0, containers >= 0.3.0.0, template-haskell >= 2.4.0.0, pretty >= 1.0.1.1, fgl
